crates/diag/tests/snapshots/render__empty_span_at_end_of_file.snap
---
source: crates/diag/tests/render.rs
expression: "render(&d, &sm, false)"
---
error: unexpected end of file
 --> main.ty:5:17
  |
5 |     print(totl)
  |                ^ expected a statement
