crates/diag/tests/snapshots/render__label_without_message.snap
---
source: crates/diag/tests/render.rs
expression: "render(&d, &sm, false)"
---
error: something is wrong here
 --> main.ty:3:14
  |
3 |     for i in range(10):
  |              ^^^^^^^^^
