crates/diag/tests/snapshots/render__primary_and_secondary_on_different_lines.snap
---
source: crates/diag/tests/render.rs
expression: "render(&d, &sm, false)"
---
error: cannot find value `totl` in this scope
 --> main.ty:5:11
  |
2 |     total = 0
  |     --------- a similar name is declared here
...
5 |     print(totl)
  |           ^^^^ not found in this scope
