crates/diag/tests/snapshots/render__render_all_separates_diagnostics_with_a_blank_line.snap
---
source: crates/diag/tests/render.rs
expression: "render_all([&first, &second], &sm, false)"
---
error: first problem
 --> main.ty:2:5
  |
2 |     total = 0
  |     ^^^^^^^^^ here

error: second problem
 --> main.ty:5:11
  |
5 |     print(totl)
  |           ^^^^ and here
