crates/diag/tests/snapshots/render__utf8_source_underlines_the_right_columns.snap
---
source: crates/diag/tests/render.rs
expression: "render(&d, &sm, false)"
---
error: unknown word
 --> utf8.ty:2:16
  |
2 |     s = "héllo wörld"
  |                ^^^^^ here
